syntax = "proto3";

package auth;

import "user.proto";

message RegisterRequest {
  string firstname = 1;
  string lastname = 2;
  string email = 3;
  string password = 4;
  string confirm_password = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}


message GetMeRequest{
  int32 id = 1;
}



message ApiResponseRegister {
  string status = 1;
  string message = 2;
  user.UserResponse data = 3;
}

message ApiResponseLogin {
  string status = 1;
  string message = 2;
  string data = 3;
}

message ApiResponseGetMe{
   string status = 1;
   string message = 2;
   user.UserResponse data = 3;
}



service AuthService {
  rpc RegisterUser(RegisterRequest) returns (ApiResponseRegister);
  rpc LoginUser(LoginRequest) returns (ApiResponseLogin);
  rpc GetMe(GetMeRequest) returns (ApiResponseGetMe);
}
